k8s-examples/hello-kubernetes/hello-kubernetes-deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kubernetes-on-path
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      name: hello-kubernetes-on-path
  template:
    metadata:
      labels:
        name: hello-kubernetes-on-path
    spec:
      containers:
        - name: app
          image: paulbouwer/hello-kubernetes:1.10.1
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kubernetes-on-subdomain
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      name: hello-kubernetes-on-subdomain
  template:
    metadata:
      labels:
        name: hello-kubernetes-on-subdomain
    spec:
      containers:
        - name: app
          image: paulbouwer/hello-kubernetes:1.10.1
          ports:
            - containerPort: 8080
