k8s-examples/hello-kubernetes/hello-kubernetes-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
#    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
    - hosts:
        - v1517.mabl.online
        - hello-kubernetes.v1517.mabl.online
      secretName: hello-kubernetes-tls-secret
  rules:
    - host: v1517.mabl.online
      http:
        paths:
          - path: /hello-kubernetes/
            pathType: Prefix
            backend:
              service:
                name: hello-kubernetes-on-path
                port:
                  number: 80
    - host: hello-kubernetes.v1517.mabl.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-kubernetes-on-subdomain
                port:
                  number: 80
